--- a/Telecom Customer Churn Analysis EDA.ipynb
+++ b/Telecom Customer Churn Analysis EDA.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cb9033cd",
+   "metadata": {},
+   "source": [
+    "# Problem Statement\n",
+    "\n",
+    "In today's competitive telecom market, operators are losing market share. Churn is a significant driver of EBITDA margin and an industry-wide issue. A churned customer generates less or no revenue while increasing competitor market share. If a customer leaves for a competitor, the service provider's acquisition costs will rise. It can cost a Service Provider up to five times as much to acquire a new subscriber as it does to keep an existing one.\n",
+    "\n",
+    "**Key questions that cients ask around churn**\n",
+    "\n",
+    "1. How can I understand my churn situation better, both\n",
+    "at the organization (macro) & subscriber (micro) levels?\n",
+    "\n",
+    "2. What are the key drivers of churn and what is\n",
+    "influencing them?\n",
+    "\n",
+    "3. What are the appropriate churn initiatives that should\n",
+    "be launched to address the different churn drivers?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d1949137",
@@ -545,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "040ff9aa",
+   "id": "0c67c035",
    "metadata": {},
    "source": [
     "1. Data is highly imbalanced, ratio = 73:27\n",
@@ -555,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "33b969d8",
+   "id": "e7253ab4",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59018608",
+   "id": "0b5ea1a6",
    "metadata": {},
    "source": [
     "# Checking % of Misiing Values"
@@ -608,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d73a852f",
+   "id": "4d3c82c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "095b642a",
+   "id": "2eaaa8c8",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4b40852f",
+   "id": "7868f922",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d08666",
+   "id": "85aa34d9",
    "metadata": {},
    "source": [
     "# Data Cleaning"
@@ -834,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c506d13b",
+   "id": "73e997a6",
    "metadata": {},
    "source": [
     "1. Create a copy of base data for manipulation & processing"
@@ -843,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a07979ed",
+   "id": "48a45473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43bec902",
+   "id": "6796662c",
    "metadata": {},
    "source": [
     " 2. Total Charges should be numeric amount. Let's convert it to numerical data type"
@@ -861,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9400c053",
+   "id": "1ea94305",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bb3468",
+   "id": "eb0dabb9",
    "metadata": {},
    "source": [
     "3. As we can see there are 11 missing values in TotalCharges column. Let's check these records"
@@ -912,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "00f45cc6",
+   "id": "1e10efd9",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93b28cb4",
+   "id": "b19f43a8",
    "metadata": {},
    "source": [
     "4. Missing Value Treatment\n",
@@ -1320,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7c39b858",
+   "id": "e57e5d44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f91f417c",
+   "id": "a4f21c02",
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef642733",
+   "id": "1b357662",
    "metadata": {},
    "source": [
     "5. Divide customers into bins based on tenure e.g. for tenure < 12 months: assign a tenure group if 1-12, for tenure between 1 to 2 Yrs, tenure group of 13-24; so on..."
@@ -1381,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b30815c4",
+   "id": "1e385c6e",
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "28879dff",
+   "id": "7ee59c2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "72a14a9d",
+   "id": "bade8ea6",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "debe7bb8",
+   "id": "b4ef1595",
    "metadata": {},
    "source": [
     "6. Remove columns not required for processing"
@@ -1446,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a8b17640",
+   "id": "c19cfca0",
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a082d1",
+   "id": "d28c6d2d",
    "metadata": {},
    "source": [
     "# Data Exploration\n",
@@ -1665,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8d34ca",
+   "id": "fdcde9bc",
    "metadata": {},
    "source": [
     "# Univariate Analysis"
@@ -1674,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "383efeb8",
+   "id": "324ba58f",
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2db98a9e",
+   "id": "12b5efa3",
    "metadata": {},
    "source": [
     "2. Convert the target variable 'Churn' in a binary numeric variable i.e. Yes=1 ; No = 0"
@@ -1865,7 +1886,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5ee96403",
+   "id": "0fd06b6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1bdf6cdf",
+   "id": "c19aaf49",
    "metadata": {},
    "outputs": [
     {
@@ -2082,7 +2103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b77e4a73",
+   "id": "cdba45d5",
    "metadata": {},
    "source": [
     "3. Convert all the categorical variables into dummy variables"
@@ -2091,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7c0ab2c2",
+   "id": "f2da727a",
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "237c20b0",
+   "id": "82c48955",
    "metadata": {},
    "source": [
     "4. Relationship between Monthly Charges and Total Charges"
@@ -2338,7 +2359,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "de3152ae",
+   "id": "b65c16d9",
    "metadata": {},
    "outputs": [
     {
@@ -2368,7 +2389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48cb92bc",
+   "id": "3b29bc27",
    "metadata": {},
    "source": [
     "So, as expected the Total Charges increase as Monthly Charges increase"
@@ -2376,7 +2397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "885db4ba",
+   "id": "35c2ec82",
    "metadata": {},
    "source": [
     "5. Churn by Monthly Charges and Total Cahrges"
@@ -2385,7 +2406,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "843504f3",
+   "id": "d5eebd03",
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fafcb60b",
+   "id": "f9804cf2",
    "metadata": {},
    "source": [
     "**Insight:** Churn is high when Monthly Charges are high"
@@ -2432,7 +2453,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fb4d5dfe",
+   "id": "83c7dc30",
    "metadata": {},
    "outputs": [
     {
@@ -2467,7 +2488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c14d9a8",
+   "id": "3b55342d",
    "metadata": {},
    "source": [
     "**Surprising insight**: higher Churn at lower Total Charges\n",
@@ -2477,7 +2498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6281b4ff",
+   "id": "6a415e3b",
    "metadata": {},
    "source": [
     "6. Build a corelation of all predictors with Churn"
@@ -2486,7 +2507,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "13dd7f43",
+   "id": "c0a71286",
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97eff169",
+   "id": "c9dcd863",
    "metadata": {},
    "source": [
     "**Derived Insight:**\n",
@@ -2534,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2af732c9",
+   "id": "cbf7079b",
    "metadata": {},
    "outputs": [
     {
@@ -2565,7 +2586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b8ed047",
+   "id": "cefa2cb3",
    "metadata": {},
    "source": [
     "# Bivariate Analysis"
@@ -2574,7 +2595,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e738befb",
+   "id": "4880d9e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2606,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9d41228f",
+   "id": "675eb1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,7 +2632,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7ec369ca",
+   "id": "c7a56a2b",
    "metadata": {},
    "outputs": [
     {
@@ -2632,7 +2653,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "39e6ea98",
+   "id": "ee44c098",
    "metadata": {
     "scrolled": true
    },
@@ -2655,7 +2676,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9dd7d87e",
+   "id": "c3a6d353",
    "metadata": {},
    "outputs": [
     {
@@ -2870,7 +2891,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "da1b6a7d",
+   "id": "a6bef517",
    "metadata": {},
    "outputs": [
     {
@@ -2891,7 +2912,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e584b781",
+   "id": "e77fdd34",
    "metadata": {},
    "outputs": [
     {
@@ -2912,7 +2933,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "9ec44208",
+   "id": "919ef44a",
    "metadata": {},
    "outputs": [
     {
@@ -2932,7 +2953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5091dd1b",
+   "id": "2dcdb75a",
    "metadata": {},
    "source": [
     "# Conclusion\n",
@@ -2948,7 +2969,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "33dcea8a",
+   "id": "8185839c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2958,7 +2979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afdad08c",
+   "id": "91ac3c18",
    "metadata": {},
    "outputs": [],
    "source": []
